--- a/pastpapers.html
+++ b/pastpapers.html
@@ -118,7 +118,7 @@
                             <hr>
                            
                             <p><ul>
-
+<li><a href="Kiswahiliformonepastpapers2021.pdf">Kiswahiliformonepastpapers2021</a></li>
                                 <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
