--- a/pastpapers.html
+++ b/pastpapers.html
@@ -248,7 +248,7 @@
                             <hr>
                            
                         <p><ul>
-
+<li><a href="economicstwoformsixpastpaper2021.pdf">economicstwoformsixpastpaper2021</a></li>
                             <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
