--- a/pastpapers.html
+++ b/pastpapers.html
@@ -251,7 +251,7 @@
 <li><a href="economicstwoformsixpastpaper2021.pdf">economicstwoformsixpastpaper2021</a></<li><a href="economicsformfivepastpaper2021.pdf"economicsformfivepastpaper2021</a></li>          <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
 <li><a href="englishlaguageformfivepastpaper5.pdf">englishlaguageformfivepastpaper5</a></li>                     <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
 <li><a href="englishlaguageformfivepastpaper5.pdf">englishlaguageformfivepastpaper5</a></li>                    <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
-                            <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
+     <li><a href="Englishlaguageoneformfivrpastpaper6.pdf">Englishlaguageoneformfivrpastpaper6</a></li>                       <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
 <li><a href="englishlaguageformfivrpastpaper4.pdf">englishlaguageformfivrpastpaper4</a></li>                    <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
