--- a/pastpapers.html
+++ b/pastpapers.html
@@ -277,7 +277,7 @@
                             <hr>
                            
                         
-          <li><a href="bios2.pdf">NECTA 2022 Biology 2</a></li>              <p><ul>historytwoformsixpemockruvuma2022
+<li><a href="englishlanguagetwopastpaperoct20.pdf">englishlanguagetwopastpaperoct20</a></li>              <p><ul>historytwoformsixpemockruvuma2022
 
               <li><a href="economicssixmock2021.pdf">economicssixmock2021</a></li>              <li><a href="bios2.pdf">NECTA 2022 Biology 2</a></li>
                             <li><a href="cyber.pdf">Mock 2019 Adv. Maths 1</a></li>
