--- a/pastpapers.html
+++ b/pastpapers.html
@@ -120,7 +120,7 @@
                             <p><ul>
 <li><a href="Kiswahiliformonepastpapers2021.pdf">Kiswahiliformonepastpapers2021</a></li>
                      <li><a href="civicsformtwopastpaper2020.pdf"></a>civicsformtwopastpaper2020</li>           <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
-                                <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
+ <li><a href="historyformonepastpaper2022.pdf">historyformonepastpaper2022</a></li>            <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
