--- a/pastpapers.html
+++ b/pastpapers.html
@@ -122,7 +122,7 @@
 <li><a href="civicsformtwopastpaper2020.pdf"></a>civicsformtwopastpaper2020</li>           <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
  <li><a href="historyformonepastpaper2022.pdf">historyformonepastpaper2022</a></li>            <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
-                                <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
+    <li><a href="cyber.historyformonepastpapersept2021">historyformonepastpapersept2021</a></li>                            <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2001 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
