--- a/pastpapers.html
+++ b/pastpapers.html
@@ -121,7 +121,7 @@
 <li><a href="Kiswahiliformonepastpapers2021.pdf">Kiswahiliformonepastpapers2021</a></li>
 <li><a href="civicsformtwopastpaper2020.pdf"></a>civicsformtwopastpaper2020</li>           <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
  <li><a href="historyformonepastpaper2022.pdf">historyformonepastpaper2022</a></li>            <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
-                                <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
+      <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>                          <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
     <li><a href="cyber.historyformonepastpapersept2021">historyformonepastpapersept2021</a></li>                            <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
                                 <li><a href="cyber.pdf">Mock 2001 Exams</a></li>
@@ -177,9 +177,10 @@
                            
                         <p><ul>
 
-        <li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>    <li><a href="cyber.pdf">NECTA 2019 Exams</a></li>
+<li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>    
+<li><a href="historyformthreepastpaper2022.pdf">historyformthreepastpaper2022</a></li>
                             <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
-                            <li><a href="cyber.pdf">NECTA 2021 Exams</a></li>
+<li><a href="cyber.pdf"><li><a href="<li><a href="cyber.pdf">Mock 2018 Exams</a></li>.pdf">Mock 2018 Exams</a></li></a></li>                      <li><a href="cyber.pdf">NECTA 2021 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
