--- a/pastpapers.html
+++ b/pastpapers.html
@@ -279,8 +279,8 @@
                            
                         
 <li><a href="englishlanguagetwopastpaperoct20.pdf">englishlanguagetwopastpaperoct20</a></li>              <p><ul>historytwoformsixpemockruvuma2022
-
-              <li><a href="economicssixmock2021.pdf">economicssixmock2021</a></li>              <li><a href="bios2.pdf">NECTA 2022 Biology 2</a></li>
+<li><a href="historytwoformsixpemockruvuma2022.pdf">historytwoformsixpemockruvuma2022</a></li>
+<li><a href="economicssixmock2021.pdf">economicssixmock2021</a></li>              <li><a href="bios2.pdf">NECTA 2022 Biology 2</a></li>
                             <li><a href="cyber.pdf">Mock 2019 Adv. Maths 1</a></li>
                             <li><a href="bios12022.pdf">NECTA 2022 Biology 1</a></li>
                             <li><a href="bios32022.pdf">NECTA 2022 Biology 3</a></li>
