--- a/pastpapers.html
+++ b/pastpapers.html
@@ -179,7 +179,7 @@
 
 <li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>    
 <li><a href="historyformthreepastpaper2022.pdf">historyformthreepastpaper2022</a></li>
-                            <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
+<li><a href="kiswahiliformthreepastpaper.pdf">kiswahiliformthreepastpaper</a></li>                      <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
 <li><a href="cyber.pdf"><li><a href="<li><a href="cyber.pdf">Mock 2018 Exams</a></li>.pdf">Mock 2018 Exams</a></li></a></li>                      <li><a href="cyber.pdf">NECTA 2021 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
