--- a/pastpapers.html
+++ b/pastpapers.html
@@ -124,9 +124,9 @@
 <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>                          <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
 <li><a href="cyber.historyformonepastpapersept2021">historyformonepastpapersept2021</a></li>                            <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
 <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>                       <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>
-                                <li><a href="cyber.pdf">Mock 2001 Exams</a></li>
-                                <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
-                                </ul></p>
+<li><a href="kiswahilioneformfivepastpaper2022.pdf">kiswahilioneformfivepastpaper2022</a></li>                    <li><a href="cyber.pdf">Mock 2001 Exams</a></li>
+ <li><a href="kiswahilioneformfivepastpaper2022.pdf">Mock 2001 Exam
+
                         </div>
                         <hr>
                     </div>
