--- a/pastpapers.html
+++ b/pastpapers.html
@@ -146,8 +146,9 @@
                             mathematicsformtwopastpaper2020
                         <p><ul>
 <li><a href=">biologyformtwopastpapermockkibaha2020.pdf"biologyformtwopastpapermockkibaha2020</a></li>
-                            <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
-<li><a href="cyber.<li><a href="cyber.pdf">Mock 2019 Exams</a></li>"><li><a href="cyber.pdf">Mock 2019 Exams</a></li></a></li>                          <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
+<li><a href="mathematicsformtwopastpaper2022.pdf"mathematicsformtwopastpaper2022</a></li>                        <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
+<li><a href="mathematicsformtwopastpaper2020.pdf"mathematicsformtwopastpaper2020</a></li>
+<li><a href="cyber.pdf">Mock 2018 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
@@ -254,7 +255,7 @@
 <li><a href="englishlaguageformfivepastpaper5.pdf">englishlaguageformfivepastpaper5</a></li>                    <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
 <li><a href="Englishlaguageoneformfivrpastpaper6.pdf">Englishlaguageoneformfivrpastpaper6</a></li>                       <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
 <li><a href="englishlaguageformfivrpastpaper4.pdf">englishlaguageformfivrpastpaper4</a></li>                    <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
-                            <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
+<li><a href="physicsformfivepatpaperterminal2022.pdf">physicsformfivepatpaperterminal2022</a></li>                       <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
