--- a/pastpapers.html
+++ b/pastpapers.html
@@ -281,10 +281,11 @@
                         economicstwoformsixpastpaper2021
 <li><a href="englishlanguagetwopastpaperoct20.pdf">englishlanguagetwopastpaperoct20</a></li>              <p><ul>historytwoformsixpemockruvuma2022
 <li><a href="historytwoformsixpemockruvuma2022.pdf">historytwoformsixpemockruvuma2022</a></li>
-<li><a href="economicssixmock2021.pdf">economicssixmock2021</a></li>              <li><a href="bios2.pdf">NECTA 2022 Biology 2</a></li>
-                            <li><a href="cyber.pdf">Mock 2019 Adv. Maths 1</a></li>
+<li><a href="economicssixmock2021.pdf">economicssixmock2021</a></li>              
+	<li><a href="bios2.pdf">NECTA 2022 Biology 2</a></li>
+<li><a href="href="economicstwoformsixpastpaper2021.pdf"economicstwoformsixpastpaper2021</a></li>                     <li><a href="cyber.pdf">Mock 2019 Adv. Maths 1</a></li>
 <li><a href="kiswhilioneformsixpemockruvuma2022.pdf"kiswhilioneformsixpemockruvuma2022</a></li>                         <li><a href="bios12022.pdf">NECTA 2022 Biology 1</a></li>
-                            <li><a href="bios32022.pdf">NECTA 2022 Biology 3</a></li>
+<li><a href="generalstudiesformsixpemock2022.pdf">generalstudiesformsixpemock2022</a></li>                <li><a href="bios32022.pdf">NECTA 2022 Biology 3</a></li>
 <li><a href="<li><a href="cyber.pdf">Mock 2019 Adv. Maths 1</a></li>.pdf"><li><a href="cyber.pdf">Mock 2019 Adv. Maths 1</a></li></a></li>                        <li><a href="cyber.pdf">Mock 2013 Accountancy 2</a></li>
                             <li><a href="cyber.pdf">NECTA 2001 Geography 1</a></li>
                             <li><a href="cyber.pdf">Mock 2007 Kiswahili 2</a></li>
