--- a/pastpapers.html
+++ b/pastpapers.html
@@ -121,10 +121,10 @@
 <li><a href="Kiswahiliformonepastpapers2021.pdf">Kiswahiliformonepastpapers2021</a></li>
 <li><a href="civicsformtwopastpaper2020.pdf"></a>civicsformtwopastpaper2020</li>           <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
 <li><a href="historyformonepastpaper2022.pdf">historyformonepastpaper2022</a></li>            <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
-<li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>                          <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
+<li><a href="cyber.pdf"> 2021 Exams</a></li>                          <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
 <li><a href="cyber.historyformonepastpapersept2021">historyformonepastpapersept2021</a></li>                            <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
 <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>                       <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>
-<li><a href="kiswahilioneformfivepastpaper2022.pdf">kiswahilioneformfivepastpaper2022</a></li>                    <li><a href="cyber.pdf">Mock 2001 Exams</a></li>
+<li><a href="englishformonepastpapersept2021.pdf">englishformonepastpapersept2021</a></li>                    <li><a href="cyber.pdf">Mock 2001 Exams</a></li>
  <li><a href="kiswahilioneformfivepastpaper2022.pdf">Mock 2001 Exam
 
                         </div>
@@ -249,7 +249,7 @@
                             <h3 class="mb-0">Form Five Past Papers</h3>
                             <hr>
                            
-                        <p><ul>
+                        <p><ul>economicsoneformsixpzstpaper3
 <li><a href="economicstwoformsixpastpaper2021.pdf">economicstwoformsixpastpaper2021</a></<li><a href="economicsformfivepastpaper2021.pdf"economicsformfivepastpaper2021</a></li>          <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
 <li><a href="englishlaguageformfivepastpaper5.pdf">englishlaguageformfivepastpaper5</a></li>                     <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
 <li><a href="englishlaguageformfivepastpaper5.pdf">englishlaguageformfivepastpaper5</a></li>                    <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
@@ -257,7 +257,7 @@
 <li><a href="englishlaguageformfivrpastpaper4.pdf">englishlaguageformfivrpastpaper4</a></li>                    <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
 <li><a href="physicsformfivepatpaperterminal2022.pdf">physicsformfivepatpaperterminal2022</a></li>                       <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
-                            <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
+<li><a href="<li><a href="cyber.pdf">NECTA 2022 Exams</a></li>.pdf"><li><a href="cyber.pdf">NECTA 2022 Exams</a></li></a></li>                       <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
                             </ul></p>
@@ -278,11 +278,11 @@
                             <h3 class="mb-0">Form Six Past Papers</h3>
                             <hr>
 
-                        economicstwoformsixpastpaper2021
+                        
 <li><a href="englishlanguagetwopastpaperoct20.pdf">englishlanguagetwopastpaperoct20</a></li>              <p><ul>historytwoformsixpemockruvuma2022
 <li><a href="historytwoformsixpemockruvuma2022.pdf">historytwoformsixpemockruvuma2022</a></li>
 <li><a href="economicssixmock2021.pdf">economicssixmock2021</a></li>              
-	<li><a href="bios2.pdf">NECTA 2022 Biology 2</a></li>
+<li><a href="economicsformsixpastpaper2021.pdf"economicstwoformsixpastpaper2021</a></li>
 <li><a href="href="economicstwoformsixpastpaper2021.pdf"economicstwoformsixpastpaper2021</a></li>                     <li><a href="cyber.pdf">Mock 2019 Adv. Maths 1</a></li>
 <li><a href="kiswhilioneformsixpemockruvuma2022.pdf"kiswhilioneformsixpemockruvuma2022</a></li>                         <li><a href="bios12022.pdf">NECTA 2022 Biology 1</a></li>
 <li><a href="generalstudiesformsixpemock2022.pdf">generalstudiesformsixpemock2022</a></li>                <li><a href="bios32022.pdf">NECTA 2022 Biology 3</a></li>
