--- a/pastpapers.html
+++ b/pastpapers.html
@@ -121,11 +121,11 @@
 <li><a href="Kiswahiliformonepastpapers2021.pdf">Kiswahiliformonepastpapers2021</a></li>
 <li><a href="civicsformtwopastpaper2020.pdf"></a>civicsformtwopastpaper2020</li>           <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
 <li><a href="historyformonepastpaper2022.pdf">historyformonepastpaper2022</a></li>            <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
-<li><a href="cyber.pdf"> 2021 Exams</a></li>                          <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
-<li><a href="cyber.historyformonepastpapersept2021">historyformonepastpapersept2021</a></li>                            <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
+<li><a href="civicsformonepastpapersept2021.pdf">civicsformonepastpapersept2021</a></li>                          <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
+<li><a href="historyformonepastpapersept2021.pdf">historyformonepastpapersept2021</a></li>                            <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
 <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>                       <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>
 <li><a href="englishformonepastpapersept2021.pdf">englishformonepastpapersept2021</a></li>                    <li><a href="cyber.pdf">Mock 2001 Exams</a></li>
- <li><a href="kiswahilioneformfivepastpaper2022.pdf">Mock 2001 Exam
+<li><a href="kiswahilioneformfivepastpaper2022.pdf">Mock 2001 Exam
 
                         </div>
                         <hr>
@@ -148,7 +148,7 @@
 <li><a href=">biologyformtwopastpapermockkibaha2020.pdf"biologyformtwopastpapermockkibaha2020</a></li>
 <li><a href="mathematicsformtwopastpaper2022.pdf"mathematicsformtwopastpaper2022</a></li>                        <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
 <li><a href="mathematicsformtwopastpaper2020.pdf"mathematicsformtwopastpaper2020</a></li>
-<li><a href="cyber.pdf">Mock 2018 Exams</a></li>
+<li><a href="civicsformtwopastpaper2020.pdf">civicsformtwopastpaper2020</a></li>
                             <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
@@ -180,12 +180,14 @@
 
 <li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>    
 <li><a href="historyformthreepastpaper2022.pdf">historyformthreepastpaper2022</a></li>
-<li><a href="kiswahiliformthreepastpaper.pdf">kiswahiliformthreepastpaper</a></li>                      <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
+<li><a href="kiswahiliformthreepastpaper.pdf">kiswahiliformthreepastpaper</a></li>
+<li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>
 <li><a href="cyber.pdf"><li><a href="<li><a href="cyber.pdf">Mock 2018 Exams</a></li>.pdf">Mock 2018 Exams</a></li></a></li>                      <li><a href="cyber.pdf">NECTA 2021 Exams</a></li>
-                            <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
-<li><a href="cyber.pdf"><li><a href="<li><a href="cyber.pdf">Mock 2022 Exams</a></li>.pdf">Mock 2022 Exams</a></li></a></li>                 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
-                            <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
-                            <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
+<li><a href="civicsformthreepastpaper.pdf">civicsformthreepastpaper</a></li>
+<li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>                 
+<li><a href="cyber.pdf">Mock 2013 Exams</a></li>
+<li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
+<li><a href="cyber.pdf">Mock 2007 Exams</a></li>
                             </ul></p>
                         
                     </div>
