--- a/pastpapers.html
+++ b/pastpapers.html
@@ -116,11 +116,14 @@
                         <div class="text-center p-4 pb-0">
                             <h3 class="mb-0">Form One Past Papers</h3>
                             <hr>
-                           
+                           biologyformonepastpaper2
                             <p><ul>
 <li><a href="Kiswahiliformonepastpapers2021.pdf">Kiswahiliformonepastpapers2021</a></li>
-<li><a href="civicsformtwopastpaper2020.pdf"></a>civicsformtwopastpaper2020</li>           <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
-<li><a href="historyformonepastpaper2022.pdf">historyformonepastpaper2022</a></li>            <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
+<li><a href="civicsformtwopastpaper2020.pdf"></a>civicsformtwopastpaper2020</li>          
+<li><a href="biologyformonepastpaper2.pdf">Mbiologyformonepastpaper2</a></li>		
+<li><a href="biologyformonepastpapersept2021.pdf">biologyformonepastpapersept2021/a></li>		    
+<li><a href="cyber.pdf">Mock 2019 Exams</a></li>
+<li><a href="historyformonepastpaper2022.pdf">historyformonepastpaper2022</a></li>            
 <li><a href="civicsformonepastpapersept2021.pdf">civicsformonepastpapersept2021</a></li>                          <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
 <li><a href="historyformonepastpapersept2021.pdf">historyformonepastpapersept2021</a></li>                            <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
 <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>                       <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>
@@ -144,15 +147,15 @@
                             <h3 class="mb-0">Form Two Past Papers</h3>
                             <hr>
                             mathematicsformtwopastpaper2020
-                        <p><ul>
+                        <p><ul>chemistryformtwopatpapermock2021
 <li><a href=">biologyformtwopastpapermockkibaha2020.pdf"biologyformtwopastpapermockkibaha2020</a></li>
 <li><a href="mathematicsformtwopastpaper2022.pdf"mathematicsformtwopastpaper2022</a></li>                        <li><a href="cyber.pdf">Mock 2019 Exams</a></li>
 <li><a href="mathematicsformtwopastpaper2020.pdf"mathematicsformtwopastpaper2020</a></li>
 <li><a href="civicsformtwopastpaper2020.pdf">civicsformtwopastpaper2020</a></li>
-                            <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
-                            <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
+  <li><a href="biologyformtwopastpaper.pdf"biologyformtwopastpaper</a></li>                          <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
+<li><a href="biologytwoformsixpastpaper.pdf"biologytwoformsixpastpaper</li></a></li>                       <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
-                            <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
+     <li><a href="chemistryformtwopatpapermock2021.pdf">chemistryformtwopatpapermock2021</a></li>                       <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
@@ -182,7 +185,8 @@
 <li><a href="historyformthreepastpaper2022.pdf">historyformthreepastpaper2022</a></li>
 <li><a href="kiswahiliformthreepastpaper.pdf">kiswahiliformthreepastpaper</a></li>
 <li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>
-<li><a href="cyber.pdf"><li><a href="<li><a href="cyber.pdf">Mock 2018 Exams</a></li>.pdf">Mock 2018 Exams</a></li></a></li>                      <li><a href="cyber.pdf">NECTA 2021 Exams</a></li>
+<li><a href="biologyformthreepastpaper.pdf">biologyformthreepastpaper</a></li>                     
+<li><a href="cyber.pdf">NECTA 2021 Exams</a></li>
 <li><a href="civicsformthreepastpaper.pdf">civicsformthreepastpaper</a></li>
 <li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>                 
 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
@@ -250,16 +254,18 @@
                         <div class="text-center p-4 pb-0">
                             <h3 class="mb-0">Form Five Past Papers</h3>
                             <hr>
-                           
+                           biologyformfivepastpaper1
                         <p><ul>economicsoneformsixpzstpaper3
-<li><a href="economicstwoformsixpastpaper2021.pdf">economicstwoformsixpastpaper2021</a></<li><a href="economicsformfivepastpaper2021.pdf"economicsformfivepastpaper2021</a></li>          <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
+<li><a href="economicstwoformsixpastpaper2021.pdf">economicstwoformsixpastpaper2021</a></<li>
+<a href="economicsformfivepastpaper2021.pdf"economicsformfivepastpaper2021</a></li>          <li><a href="cyber.pdf">Mock 2018 Exams</a></li>
 <li><a href="englishlaguageformfivepastpaper5.pdf">englishlaguageformfivepastpaper5</a></li>                     <li><a href="cyber.pdf">Mock 2021 Exams</a></li>
 <li><a href="englishlaguageformfivepastpaper5.pdf">englishlaguageformfivepastpaper5</a></li>                    <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
 <li><a href="Englishlaguageoneformfivrpastpaper6.pdf">Englishlaguageoneformfivrpastpaper6</a></li>                       <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
 <li><a href="englishlaguageformfivrpastpaper4.pdf">englishlaguageformfivrpastpaper4</a></li>                    <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
 <li><a href="physicsformfivepatpaperterminal2022.pdf">physicsformfivepatpaperterminal2022</a></li>                       <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
-                            <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
-<li><a href="<li><a href="cyber.pdf">NECTA 2022 Exams</a></li>.pdf"><li><a href="cyber.pdf">NECTA 2022 Exams</a></li></a></li>                       <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
+
+<li><a href="biologyformfivepastpaper1.pdf">biologyformfivepastpaper1</a></li>.pdf"><li>
+<a href="cyber.pdf">NECTA 2022 Exams</a></li></a></li>                       <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
                             <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
                             <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
                             </ul></p>
