--- a/pastpapers.html
+++ b/pastpapers.html
@@ -295,8 +295,8 @@
 <li><a href="kiswhilioneformsixpemockruvuma2022.pdf"kiswhilioneformsixpemockruvuma2022</a></li>                         <li><a href="bios12022.pdf">NECTA 2022 Biology 1</a></li>
 <li><a href="generalstudiesformsixpemock2022.pdf">generalstudiesformsixpemock2022</a></li>                <li><a href="bios32022.pdf">NECTA 2022 Biology 3</a></li>
 <li><a href="<li><a href="cyber.pdf">Mock 2019 Adv. Maths 1</a></li>.pdf"><li><a href="cyber.pdf">Mock 2019 Adv. Maths 1</a></li></a></li>                        <li><a href="cyber.pdf">Mock 2013 Accountancy 2</a></li>
-                            <li><a href="cyber.pdf">NECTA 2001 Geography 1</a></li>
-                            <li><a href="cyber.pdf">Mock 2007 Kiswahili 2</a></li>
+<li><a href="historyformtwopastpapermockkibaha2020.pdf">historyformtwopastpapermockkibaha2020/a></li>                          <li><a href="cyber.pdf">NECTA 2001 Geography 1</a></li>
+<li><a href="historyoneformsixpastpaperchalinze2022.pdf">historyoneformsixpastpaperchalinze2022</a></li>                          <li><a href="cyber.pdf">Mock 2007 Kiswahili 2</a></li>
                             </ul></p>
                         
                     </div>
