--- a/pastpapers.html
+++ b/pastpapers.html
@@ -179,14 +179,14 @@
                             <h3 class="mb-0">Form Three Past Papers</h3>
                             <hr>
                            
-                        <p><ul>mathematicsformthreepastpaper2022
+                        <p><ul>
 
 <li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>    
 <li><a href="historyformthreepastpaper2022.pdf">historyformthreepastpaper2022</a></li>
 <li><a href="kiswahiliformthreepastpaper.pdf">kiswahiliformthreepastpaper</a></li>
 <li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>
 <li><a href="biologyformthreepastpaper.pdf">biologyformthreepastpaper</a></li>                     
-<li><a href="cyber.pdf">NECTA 2021 Exams</a></li>
+<li><a href="mathematicsformthreepastpaper2022.pdf">mathematicsformthreepastpaper2022</a></li>
 <li><a href="civicsformthreepastpaper.pdf">civicsformthreepastpaper</a></li>
 <li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>                 
 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
