--- a/pastpapers.html
+++ b/pastpapers.html
@@ -157,8 +157,8 @@
 <li><a href="commerceformtwopastpapermockkibaha2020.pdf">commerceformtwopastpapermockkibaha2020</a></li>                          <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
 <li><a href="chemistryformtwopatpapermock2021.pdf">chemistryformtwopatpapermock2021</a></li>                       <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
 <li><a href="Bookkeepingformtwopastpapermockkibaha2020.pdf">Bookkeepingformtwopastpapermockkibaha2020</a></li>                        <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
-<li><a href="cyber.pdf">NECTA 2022 Exams</a></li>                       <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
-<li><a href="cyber.pdf">Mock 2007 Exams</a></li>                 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
+<li><a href="cyber.pdf">mathematicsformtwopastpapermockkibaha2020</a></li>                       <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
+<li><a href="mathematicsformtwopastpapermockkibaha2020.pdf">Mock 2007 Exams</a></li>                 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
 <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>                          <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
 <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
 <li><a href="cyber.pdf">Mock 2007 Exams</a></li>      
