--- a/pastpapers.html
+++ b/pastpapers.html
@@ -159,7 +159,7 @@
 <li><a href="Bookkeepingformtwopastpapermockkibaha2020.pdf">Bookkeepingformtwopastpapermockkibaha2020</a></li>                        <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
 <li><a href="cyber.pdf">mathematicsformtwopastpapermockkibaha2020</a></li>                       <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
 <li><a href="mathematicsformtwopastpapermockkibaha2020.pdf">Mock 2007 Exams</a></li>                 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
-<li><a href="cyber.pdf">NECTA 2001 Exams</a></li>                          <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
+<li><a href="biologyformtwopastpapermockkibaha2020.pdf">biologyformtwopastpapermockkibaha2020</a></li>                          <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
 <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
 <li><a href="cyber.pdf">Mock 2007 Exams</a></li>      
 <li><a href="cyber.pdf">Mock 2007 Exams</a></li>                      </ul></p>
