--- a/pastpapers.html
+++ b/pastpapers.html
@@ -122,15 +122,18 @@
 <li><a href="civicsformtwopastpaper2020.pdf"></a>civicsformtwopastpaper2020</li>          
 <li><a href="biologyformonepastpaper2.pdf">Mbiologyformonepastpaper2</a></li>		
 <li><a href="biologyformonepastpapersept2021.pdf">biologyformonepastpapersept2021/a></li>		    
-<li><a href="cyber.pdf">Mock 2019 Exams</a></li>
+<li><a href="Bookkeepingformtwopastpapermockkibaha2020.pdf">Bookkeepingformtwopastpapermockkibaha2020</a></li>
 <li><a href="historyformonepastpaper2022.pdf">historyformonepastpaper2022</a></li>            
-<li><a href="civicsformonepastpapersept2021.pdf">civicsformonepastpapersept2021</a></li>                          <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
-<li><a href="historyformonepastpapersept2021.pdf">historyformonepastpapersept2021</a></li>                            <li><a href="cyber.pdf">Mock 2022 Exams</a></li>
-<li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>                       <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>
-<li><a href="englishformonepastpapersept2021.pdf">englishformonepastpapersept2021</a></li>                    <li><a href="cyber.pdf">Mock 2001 Exams</a></li>
+<li><a href="civicsformonepastpapersept2021.pdf">civicsformonepastpapersept2021</a></li>                          
+<li><a href="historyformonepastpapersept2021.pdf">historyformonepastpapersept2021</a></li>                            
+<li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>                       
+<li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>
+<li><a href="englishformonepastpapersept2021.pdf">englishformonepastpapersept2021</a></li>                    
+<li><a href="cyber.pdf">Mock 2001 Exams</a></li>
 <li><a href="kiswahilioneformfivepastpaper2022.pdf">Mock 2001 Exam
-
-                        </div>
+<li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
+<li><a href="cyber.pdf">Mock 2022 Exams</a></li>            
+                 </div>
                         <hr>
                     </div>
                 </div>
