--- a/pastpapers.html
+++ b/pastpapers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+8<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -129,7 +129,7 @@
 <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>                       
 <li><a href="Kiswahiliformonepastpapersept2021.pdf">Kiswahiliformonepastpapersept2021</a></li>
 <li><a href="englishformonepastpapersept2021.pdf">englishformonepastpapersept2021</a></li>                    
-<li><a href="cyber.pdf">Mock 2001 Exams</a></li>
+<li><a href="bibleknowledgeformtwopastpapermockkibaha20.pdf">bibleknowledgeformtwopastpapermockkibaha20</a></li>
 <li><a href="kiswahilioneformfivepastpaper2022.pdf">Mock 2001 Exam
 <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
 <li><a href="cyber.pdf">Mock 2022 Exams</a></li>            
