--- a/pastpapers.html
+++ b/pastpapers.html
@@ -132,7 +132,7 @@
 <li><a href="bibleknowledgeformtwopastpapermockkibaha20.pdf">bibleknowledgeformtwopastpapermockkibaha20</a></li>
 <li><a href="englishformtwopastpapermockkibaha2020">englishformtwopastpapermockkibaha2020</a></li>
 <li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
-<li><a href="cyber.pdf">Mock 2022 Exams</a></li>            
+<li><a href="civicsformtwopastpapermockkibaha2020.pdf">civicsformtwopastpapermockkibaha2020</a></li>            
                  </div>
                         <hr>
                     </div>
