--- a/pastpapers.html
+++ b/pastpapers.html
@@ -131,7 +131,7 @@
 <li><a href="englishformonepastpapersept2021.pdf">englishformonepastpapersept2021</a></li>                    
 <li><a href="bibleknowledgeformtwopastpapermockkibaha20.pdf">bibleknowledgeformtwopastpapermockkibaha20</a></li>
 <li><a href="englishformtwopastpapermockkibaha2020">englishformtwopastpapermockkibaha2020</a></li>
-<li><a href="cyber.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
+<li><a href="Mockhistoryformthreepastpaper2022.pdf">Mockhistoryformthreepastpaper2022 2021 Exams</a></li>
 <li><a href="civicsformtwopastpapermockkibaha2020.pdf">civicsformtwopastpapermockkibaha2020</a></li>            
                  </div>
                         <hr>
@@ -163,8 +163,8 @@
 <li><a href="cyber.pdf">mathematicsformtwopastpapermockkibaha2020</a></li>                       <li><a href="cyber.pdf">NECTA 2022 Exams</a></li>
 <li><a href="mathematicsformtwopastpapermockkibaha2020.pdf">Mock 2007 Exams</a></li>                 <li><a href="cyber.pdf">Mock 2013 Exams</a></li>
 <li><a href="biologyformtwopastpapermockkibaha2020.pdf">biologyformtwopastpapermockkibaha2020</a></li>                          <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
-<li><a href="cyber.pdf">Mock 2007 Exams</a></li>
-<li><a href="cyber.pdf">Mock 2007 Exams</a></li>      
+<li><a href="civicsformtwopastpapermockkibaha2020.pdf">civicsformtwopastpapermockkibaha2020</a></li>
+<li><a href="bibleknowledgeformtwopastpapermockkibaha20.pdf">bibleknowledgeformtwopastpapermockkibaha20</a></li>      
 <li><a href="cyber.pdf">Mock 2007 Exams</a></li>                      </ul></p>
                         </div>
                         <hr>
@@ -193,7 +193,7 @@
 <li><a href="mathematicsformthreepastpaper2022.pdf">mathematicsformthreepastpaper2022</a></li>
 <li><a href="civicsformthreepastpaper.pdf">civicsformthreepastpaper</a></li>
 <li><a href="civicsformthreepastpaper2.pdf">civicsformthreepastpaper2</a></li>                 
-<li><a href="cyber.pdf">Mock 2013 Exams</a></li>
+<li><a href="Mockhistoryformthreepastpaper2022.pdf">Mockhistoryformthreepastpaper2022</a></li>
 <li><a href="cyber.pdf">NECTA 2001 Exams</a></li>
 <li><a href="cyber.pdf">Mock 2007 Exams</a></li>
                             </ul></p>
