--- a/login2.html
+++ b/login2.html
@@ -95,7 +95,7 @@
         <div align="center">
             <p><font size=3 color="black"><b>Customer Account</b></font></p>
             <p><b><font size=3 color="black">Please Send Email with Your Fullname to Get Login Access </font></b></p>	
-            <p><a href="mailto:  jonasmapunda@gmail.com"><button class="btn btn-dark">Send</button></a>
+            <p><a href="mailto:  mapundajonas@gmail.com"><button class="btn btn-dark">Send</button></a>
             </p>	
         </div>
            <a href="forgot1.html"><font color="black" size=2>Forgot</font></a>
@@ -139,6 +139,7 @@
 	</div>
   </div>
  
+
 
 
 
