--- a/team.html
+++ b/team.html
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Miss. Fausta Komba</h5>
+                            <h5 class="mb-0">Miss Fausta Komba</h5>
                             <small>Project Facilitator</small>
                         </div>
                     </div>
@@ -211,6 +211,7 @@
 	</div>
   </div>
  
+
 
 
 
