--- a/testimonial.html
+++ b/testimonial.html
@@ -326,6 +326,7 @@
 
 
 
+
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
@@ -342,7 +343,7 @@
                     <h4 class="text-white mb-3">Contact</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Songea , TANZANIA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+255-625-835864">+255 625 835 864</a></p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i><a href="mailto:  mapundajonas@gmail.com">mapundajonas@gmail.com</a></p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i><a href="mailto:  jonasmapunda@gmail.com">jonasmapunda@gmail.com</a></p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
