--- a/about.html
+++ b/about.html
@@ -246,7 +246,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/jonas.jpg" alt="">
+                            <img class="img-fluid" src="img/get1.jpg" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -256,7 +256,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Mr. Jonas Mapunda</h5>
+                            <h5 class="mb-0">Jonas Mapunda</h5>
                             <small>Managing Director</small>
                         </div>
                     </div>
@@ -264,7 +264,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/joseph.jpg" alt="">
+                            <img class="img-fluid" src="img/get2.jpg" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -274,15 +274,15 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Mr. Joseph Milinga</h5>
-                            <small>Project Facilitator</small>
+                            <h5 class="mb-0">Jonas Mapunda</h5>
+                            <small>Secretary</small>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/fausta.jpg" alt="">
+                            <img class="img-fluid" src="img/get33.jpg" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -292,15 +292,15 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Miss Fausta Komba</h5>
-                            <small>Project Facilitator</small>
+                            <h5 class="mb-0">Jonas Mapunda</h5>
+                            <small>Accountant</small>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/ezekia.jpg" alt="">
+                            <img class="img-fluid" src="img/get4.jpg" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -310,8 +310,8 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Mr. Ezekia Chuvaka</h5>
-                            <small>Project Facilitator</small>
+                            <h5 class="mb-0">Jonas Mapunda</h5>
+                            <small>Technical Support</small>
                         </div>
                     </div>
                 </div>
@@ -356,6 +356,7 @@
  
 
 
+
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
@@ -372,7 +373,7 @@
                     <h4 class="text-white mb-3">Contact</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Songea , TANZANIA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+255-625-835864">+255 625 835 864</a></p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i><a href="mailto:  mapundajonas@gmail.com">mapundajonas@gmail.com</a></p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i><a href="mailto:  jonasmapunda@gmail.com">jonasmapunda@gmail.com</a></p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
