--- a/register2.html
+++ b/register2.html
@@ -95,7 +95,7 @@
     <div align="center">
 		<p><font size=3 color="black"><b>Customer Account</b></font></p>
 		<p><b><font size=3 color="black">Please Send Your Payment Attachment as a Proof to Get Your Login Credentials </font></b></p>	
-        <p><a href="mailto:  jonasmapunda@gmail.com"><button class="btn btn-dark">Send</button></a>
+        <p><a href="mailto:  mapundajonas@gmail.com"><button class="btn btn-dark">Send</button></a>
         </p>	
     </div>
 		
@@ -143,6 +143,7 @@
 	</div>
   </div>
  
+
 
 
 
