--- a/about.html
+++ b/about.html
@@ -246,7 +246,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/get1.jpg" alt="">
+                            <img class="img-fluid" src="img/jonas.jpg" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -256,7 +256,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Jonas Mapunda</h5>
+                            <h5 class="mb-0">Mr. Jonas Mapunda</h5>
                             <small>Managing Director</small>
                         </div>
                     </div>
@@ -274,15 +274,15 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Jonas Mapunda</h5>
-                            <small>Secretary</small>
+                            <h5 class="mb-0">Mr. Joseph Milinga</h5>
+                            <small>Facilitator</small>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/get33.jpg" alt="">
+                            <img class="img-fluid" src="img/fausta.jpg" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -292,15 +292,15 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Jonas Mapunda</h5>
-                            <small>Accountant</small>
+                            <h5 class="mb-0">Miss Fausta Komba</h5>
+                            <small>Facilitator</small>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item bg-light">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/get4.jpg" alt="">
+                            <img class="img-fluid" src="img/ezekia.jpg" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                             <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -310,8 +310,8 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Jonas Mapunda</h5>
-                            <small>Technical Support</small>
+                            <h5 class="mb-0">Mr. Ezekia Chuvaka</h5>
+                            <small>Facilitator</small>
                         </div>
                     </div>
                 </div>
